# REMOTE_CONTROL_APP

./: CMakeLists.txt  ClickableLabel.qml  Controller.qml  Devices.qml  JoyStick.qml  Main.qml  Services.qml  controllerobject.cpp  controllerobject.h  device.cpp  device.h  main.cpp  serviceinfo.cpp  serviceinfo.h
MacOS/: Info.plist
android/: AndroidManifest.xml
esp32_firmware/sketch_dec17a/: sketch_dec17a.ino
